<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingBottom="10dp"
        android:paddingTop="0dp"
        android:layout_marginTop="50dp"
>
        <Button
            android:id="@+id/spy_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#ffff0000"
            android:text="@string/spy_button" />

        <Button
            android:id="@+id/nospy_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#ff00d100"
            android:text="@string/nospy_button" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true">

        <Button
            android:id="@+id/settings_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/setting_button" />

        <LinearLayout
            android:id="@+id/inet_status"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/inet_off_color"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="65dp"
        android:layout_marginTop="110dp"
        android:background="@color/white"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <!-- контейнер для отображения состояния датчиков -->
            <LinearLayout
                android:id="@+id/sensorsContainer"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@color/white"
                android:orientation="vertical" />

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
