<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCCCC"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.werklogic.werklogic.dm.SensorTypeActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gercon" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/infra" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brelok2" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brelok4" />

                </LinearLayout>
            </LinearLayout>
        </RadioGroup>
    </LinearLayout>

    <!-- Геркон -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:src="@drawable/gercon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                style="@style/SensorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gercon" />

        </LinearLayout>
    </LinearLayout>

    <!-- Инфракрасный датчик -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:src="@drawable/infra" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                style="@style/SensorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infra" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action" />

            <Spinner
                android:id="@+id/infra_action_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/action_type_array" />

        </LinearLayout>
    </LinearLayout>

    <!-- 2-х канальный брелок -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:src="@drawable/brelok2" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                style="@style/SensorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brelok2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button1_action" />

            <Spinner
                android:id="@+id/brelok2_action1_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/action_type_array" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button2_action" />

            <Spinner
                android:id="@+id/brelok2_action2_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/action_type_array" />

        </LinearLayout>
    </LinearLayout>

    <!-- 4-х канальный брелок -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:src="@drawable/brelok4" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                style="@style/SensorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brelok4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button1_action" />

            <Spinner
                android:id="@+id/brelok4_action1_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/action_type_array" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button2_action" />

            <Spinner
                android:id="@+id/brelok4_action2_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/action_type_array" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button1_action" />

            <Spinner
                android:id="@+id/brelok4_action3_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/action_type_array" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button2_action" />

            <Spinner
                android:id="@+id/brelok4_action4_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/action_type_array" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action" />

    <Spinner
        android:id="@+id/gercon_action_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/action_type_array" />


</LinearLayout>
